Add abstract, continue with dep. metrics

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -188,5 +188,27 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title		 = {Principles of Object Oriented Design},
 }
 
+@misc{KPIMetrics,
+	author       = {{Atlassian}},
+	howpublished = {\url{https://www.atlassian.com/incident-management/kpis/common-metrics} (accessed at 23/02/2022)},
+	title        = {{M}TBF, {M}TTR, {M}TTA, and {M}TTF},
+}
 
+@misc{KubernetesOverview,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/overview/what-is-kubernetes/} (accessed at 23/02/2022)},
+	title        = {{W}hat is {K}ubernetes?},
+}
+
+@misc{KubernetesOverviewRH,
+	author       = {{Red Hat}},
+	howpublished = {\url{https://www.redhat.com/en/topics/containers/what-is-kubernetes} (accessed at 23/02/2022)},
+	title        = {{W}hat is {K}ubernetes?},
+}
+
+@misc{KubernetesArchitecture,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/overview/components/} (accessed at 23/02/2022)},
+	title        = {{K}ubernetes {C}omponents},
+}
 
