--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -25,7 +25,7 @@
 
 \newcommand{\vikcim}{Application-specific fine-tuning of a Kubernetes-based infrastructure to increase fault tolerance-related metrics} % Cím
 \newcommand{\viktanszek}{\bmemit} % Tanszék
-\newcommand{\vikdoktipus}{\msconlabii} % Dokumentum típusa (\bsc vagy \msc)
+\newcommand{\vikdoktipus}{\msc} % Dokumentum típusa (\bsc vagy \msc)
 \newcommand{\vikmunkatipusat}{szakdolgozatot} % a "hallgató nyilatkozat" részhez: szakdolgozatot vagy diplomatervet
 
 %\input{include/tdk-variables}
@@ -68,8 +68,8 @@
 
 % Declaration and Abstract
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-%\include{include/declaration} %TODO Hallgatói nyilatkozat -- TDK és OTDK esetén törlendő!
-%\include{content/abstract}    %TODO Összefoglaló -- TDK és OTDK esetén nem kötelező
+\include{include/declaration} %TODO Hallgatói nyilatkozat -- TDK és OTDK esetén törlendő!
+\include{content/abstract}    %TODO Összefoglaló -- TDK és OTDK esetén nem kötelező
 
 
 % The main part of the thesis
@@ -83,8 +83,8 @@
 \include{content/test-framework}
 \include{content/enhancements}
 \include{content/evaluation}
-%\include{content/future-work}
-%\include{content/related-works}
+\include{content/future-work}
+\include{content/related-works}
 \include{content/summary}
 %\include{content/latex-tools}
 %\include{content/thesis-format}
@@ -93,7 +93,7 @@
 
 % Acknowledgements
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-%\include{content/acknowledgement}
+\include{content/acknowledgement}
 
 
 % List of Figures, Tables
