Add baseline measuring section

--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -743,3 +743,8 @@ It is possible to define pipeline parameters in Jenkins to customize the behavio
 
 All the command line configuration options of Kubedepend are exposed in the Jenkinsfile as well for easy usage.
 
+
+%----------------------------------------------------------------------------
+\section{Baseline measuring}
+%----------------------------------------------------------------------------
+
