--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -212,3 +212,44 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title        = {{K}ubernetes {C}omponents},
 }
 
+@misc{KubernetesNamespace,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/} (accessed at 26/03/2022)},
+	title        = {{N}amespaces},
+}
+
+@misc{KubernetesPod,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/workloads/pods/} (accessed at 26/03/2022)},
+	title        = {{P}ods},
+}
+
+@misc{KubernetesLabel,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/} (accessed at 26/03/2022)},
+	title        = {{L}abels and Selectors},
+}
+
+@misc{KubernetesNodeSelector,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector} (accessed at 26/03/2022)},
+	title        = {{A}ssigning {P}ods to {N}odes},
+}
+
+@misc{KubernetesReplicaSet,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/} (accessed at 26/03/2022)},
+	title        = {{R}eplica{S}et},
+}
+
+@misc{KubernetesDeployment,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/workloads/controllers/deployment/} (accessed at 26/03/2022)},
+	title        = {{D}eployments},
+}
+
+@misc{KubernetesService,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/services-networking/service/} (accessed at 26/03/2022)},
+	title        = {{S}ervice},
+}
