--- a/docs/content/enhancements.tex
+++ b/docs/content/enhancements.tex
@@ -2,6 +2,10 @@
 \chapter{Enhancements} \label{enhancements}
 %----------------------------------------------------------------------------
 
+\begin{itemize}
+	\item based on the results of the baseline measurement, design enhancements
+\end{itemize}
+
 This chapter describes a few alternatives to improve the dependability of the sample application.
 
 %----------------------------------------------------------------------------
@@ -15,7 +19,7 @@ This chapter describes a few alternatives to improve the dependability of the sa
 
 The robustness of the system can be enhanced in different layers. Some options are presented below:
 
-\paragraph{Kubernetes Infrastructure layer} The Kubernetes infrastructure layer is the fundamental of the whole system. Even a little configuration change can have a huge impact on the behavior of the applications. For instance, to tackle Pod lifecycle related failure anomalies, the Kubernetes Scheduler could be extended to introduce application specific fine tuning.
+\paragraph{Kubernetes Infrastructure layer} The Kubernetes infrastructure layer is the fundamental tier of the whole system. Even a little configuration change can have a huge impact on the behavior of the applications. For instance, to tackle Pod lifecycle related failure anomalies, the Kubernetes Scheduler could be extended to introduce application specific fine tuning.
 
 \paragraph{Kubernetes Deployment layer} This layer affects how the application is deployed and run on the Kubernetes cluster. The dependability of the system can be improved with the right selection and configuration of Kubernetes objects. For example, all the component Pods could be replicated (not just the worker) or scaled with using a Horizontal Pod Autoscaler to eliminate single-point-of-failures from the system.
 
@@ -27,8 +31,9 @@ The robustness of the system can be enhanced in different layers. Some options a
 \subsection{Kafka}
 %----------------------------------------------------------------------------
 
-% TODO more details about Kafka - Producer, Consumer, Topic?
-% TODO first describe the failure scenario it solves?
+TODO more details about Kafka - Producer, Consumer, Topic?
+
+TODO first describe the failure scenario it solves -  refer to baseline measurement
 
 Apache Kafka is an open-source distributed event streaming platform that can be used for high-performance data pipelines, streaming analytics and data integration \cite{Kafka}. It acts as a scalable, fault tolerant publish-subscribe messaging system ideal for performance critical applications.
 
@@ -40,7 +45,7 @@ Kafka topics can be used to facilitate the forwarding of task submissions and re
 \subsection{Heartbeats}
 %----------------------------------------------------------------------------
 
-% TODO first describe the failure scenario it solves?
+TODO first describe the failure scenario it solves? -  refer to baseline measurement
 
 Heartbeats is a custom enhancement option in the application to provide reliable task execution.
 
@@ -100,9 +105,7 @@ The build pipeline presented in Section \ref{cicd} introduces new stages and mod
 
 \paragraph{Set up Enhancements (\texttt{ENHNC - set up})} This stage configures and installs the helm chart for Kafka onto the Kubernetes cluster. The execution of Kafka deployment is controlled by the pipeline parameter \texttt{UseKafka}.
 
-\paragraph{Deploy Application (\texttt{APP - deploy})} The stage is extended with passing parameters to the application helm chart that control which enhancement options to use. 
-
-\paragraph{Clean up Enhancements (\texttt{CLEAN - ENHNC})} In this stage, all the enhancements related tools and settings can be cleaned up from the cluster and the Jenkins workspace.
+\paragraph{Deploy Application (\texttt{APP - deploy})} The stage is extended with passing parameters to the application helm chart that control which enhancement options to use.
 
 
 
