K8s service and HPA doc

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -253,3 +253,9 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://kubernetes.io/docs/concepts/services-networking/service/} (accessed at 26/03/2022)},
 	title        = {{S}ervice},
 }
+
+@misc{KubernetesHPA,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/} (accessed at 26/03/2022)},
+	title        = {{H}orizontal {P}od {A}utoscaling},
+}
